--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   review:
@@ -31,6 +32,8 @@ jobs:
           BRANCH_NAME: ${{ github.head_ref }}
         run: |
           # Configuration
+          # Max diff size in characters - Gemini API has token limits
+          # 40k chars ≈ 10k tokens, leaving headroom for prompt + response
           MAX_DIFF_SIZE=40000
 
           cat > prompt_header.txt << 'EOF'
@@ -97,10 +100,12 @@ jobs:
 
           echo "Calling Gemini API..."
 
-          # Save response to file with timeout
+          # Save response to file with extended timeout for Gemini 3 Pro
+          # --connect-timeout 30: Allow 30s to establish connection
+          # --max-time 210: Allow 3.5 minutes for complete response (Gemini 3 Pro can be slow)
           HTTP_CODE=$(curl -s \
-            --connect-timeout 10 \
-            --max-time 60 \
+            --connect-timeout 30 \
+            --max-time 210 \
             -w "%{http_code}" \
             -o gemini_response.json \
             -X POST \
@@ -109,23 +114,68 @@ jobs:
             -d "$PAYLOAD" \
             https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-preview:generateContent)
 
+          CURL_EXIT=$?
+
           echo "HTTP Status: $HTTP_CODE"
+          echo "Curl exit code: $CURL_EXIT"
+
+          # Handle timeout errors (exit code 28)
+          if [ "$CURL_EXIT" -eq 28 ]; then
+            echo "Error: API request timed out after 210 seconds"
+            cat > review.txt << 'EOF'
+⚠️ **Gemini API Timeout**
+
+The Gemini 3 Pro model took too long to respond (>3.5 minutes). This can happen with large diffs or complex analysis.
+
+**Suggestions:**
+- Try reducing the diff size
+- Use a faster model (e.g., gemini-2.5-flash)
+- Retry the workflow
+EOF
+            exit 0
+          fi
+
+          # Handle other curl errors
+          if [ "$CURL_EXIT" -ne 0 ]; then
+            echo "Error: Curl failed with exit code $CURL_EXIT"
+            cat > review.txt << EOF
+⚠️ **Network Error**
+
+Failed to connect to Gemini API (curl exit code: $CURL_EXIT).
+
+**Please check:**
+- Network connectivity
+- API endpoint availability
+- Retry the workflow
+EOF
+            exit 0
+          fi
 
           if [ "$HTTP_CODE" != "200" ]; then
             echo "Error: Gemini API returned status $HTTP_CODE"
             cat gemini_response.json
 
-            ERROR_MSG="⚠️ **Gemini API Error (HTTP $HTTP_CODE)**\n\n"
-
+            # Build error message based on HTTP status
             if [ "$HTTP_CODE" == "429" ]; then
-              ERROR_MSG="${ERROR_MSG}Rate limit exceeded. Please check your API quota at https://ai.dev/usage"
+              cat > review.txt << EOF
+⚠️ **Gemini API Error (HTTP $HTTP_CODE)**
+
+Rate limit exceeded. Please check your API quota at https://aistudio.google.com/app/apikey
+EOF
             elif [ "$HTTP_CODE" == "401" ] || [ "$HTTP_CODE" == "403" ]; then
-              ERROR_MSG="${ERROR_MSG}Authentication failed. Please verify GEMINI_API_KEY secret is configured correctly."
+              cat > review.txt << EOF
+⚠️ **Gemini API Error (HTTP $HTTP_CODE)**
+
+Authentication failed. Please verify GEMINI_API_KEY secret is configured correctly.
+EOF
             else
-              ERROR_MSG="${ERROR_MSG}API call failed. Check workflow logs for details."
+              cat > review.txt << EOF
+⚠️ **Gemini API Error (HTTP $HTTP_CODE)**
+
+API call failed. Check workflow logs for details.
+EOF
             fi
 
-            echo -e "$ERROR_MSG" > review.txt
             exit 0
           fi
 
