Analyze multi-agent systems and compare with Bazinga (#118)
* Add ultrathink analysis: BAZINGA vs multi-agent system patterns

Deep comparative analysis of BAZINGA orchestration system against
industry multi-agent design patterns from Azure Essentials and SKura
research presentations.

Key findings:
- BAZINGA excels in role specialization, workflow enforcement, quality gates
- Main gap: No competitive/adversarial patterns for quality improvement
- Top recommendations: Test Challenge Pattern, Self-Adversarial Review
- Model selection optimization identified as quick win

Includes prioritized implementation roadmap with effort/impact analysis.

* Add ultrathink: Adversarial architecture overhaul plan

Comprehensive planning document for major BAZINGA evolution:

1. Multi-Level Test Challenge Pattern (5 levels)
   - L1: Boundary Probing (always)
   - L2: Mutation Analysis (new code)
   - L3: Behavioral Contracts (business logic)
   - L4: Security Adversary (external-facing)
   - L5: Production Chaos (critical systems)

2. Two-Tier Developer System
   - Developer (Haiku): Simple tasks, fast, cost-effective
   - Senior Engineer (Sonnet): Complex architecture, security
   - Complexity scoring for assignment
   - Escalation triggers

3. Multi-Level Self-Adversarial Review
   - QA: Coverage gap challenges
   - Tech Lead: 3-level adversarial (Standard/Deep/Critical)
   - PM: Completion challenges before BAZINGA

4. Optimized Model Selection
   - Haiku: Developer (40% of spawns)
   - Sonnet: Senior Eng, QA, PM (50%)
   - Opus: Tech Lead critical, Investigator (10%)
   - Projected 33% cost reduction

Includes:
- Complete impact analysis (19 files, ~2,240 lines)
- 7-phase implementation plan with validation
- Risk assessment and rollback plan
- Success metrics

Status: Awaiting user approval before implementation

* Update escalation threshold: 1x failure, Level 3-4 challenges

More aggressive escalation strategy:
- Developer fails 1x → Immediate Senior Engineer escalation
- Le

--- a/bazinga/skills_config.json
+++ b/bazinga/skills_config.json
@@ -6,6 +6,14 @@
     "api-contract-validation": "optional",
     "db-migration-check": "optional"
   },
+  "senior_software_engineer": {
+    "lint-check": "mandatory",
+    "codebase-analysis": "mandatory",
+    "test-pattern-analysis": "mandatory",
+    "api-contract-validation": "optional",
+    "db-migration-check": "optional",
+    "security-scan": "optional"
+  },
   "tech_lead": {
     "security-scan": "mandatory",
     "lint-check": "mandatory",
@@ -32,7 +40,7 @@
   },
   "_metadata": {
     "description": "Skills configuration for BAZINGA agents",
-    "last_updated": "2025-01-16T00:00:00Z",
+    "last_updated": "2025-11-25T00:00:00Z",
     "profile": "lite",
     "configuration_notes": [
       "MANDATORY: Skill will be automatically invoked by the agent (always runs)",
