Fix missing better-sqlite3 module dependency (#150)
* fix: handle better-sqlite3 architecture mismatch gracefully

Use dynamic require() instead of static import to catch and handle
native module loading failures (arm64 vs x86_64 architecture mismatch).

Dashboard now starts with empty data instead of crashing when the
native binary is compiled for a different architecture. Users get
a clear console warning with fix instructions.

Fix instructions: cd dashboard-v2 && npm rebuild better-sqlite3

* fix: include better-sqlite3 native module in dashboard release

- Copy better-sqlite3 to release package so socket server can find it
- Set NODE_PATH in startup scripts to locate the native module
- Update both bash and PowerShell scripts for cross-platform support

This fixes the "Cannot find module 'better-sqlite3'" error when running
the socket server from a pre-built release package.

* fix: use macos-13 for Intel Mac dashboard builds

GitHub changed macos-latest to point to macos-14 (Apple Silicon) in late 2024.
This caused darwin-x64 releases to contain arm64 native binaries, breaking
installation on Intel Macs.

Root cause: both darwin-x64 and darwin-arm64 builds were running on arm64
runners, so the "x64" package contained arm64 better-sqlite3 binaries.

Fix: Use macos-13 explicitly for darwin-x64 (last Intel macOS runner)

Affected release: dashboard-v1.0.2

* fix: make bazinga init download pre-built dashboard

Previously, 'bazinga init' only copied source files requiring npm install,
while 'bazinga update' downloaded pre-built releases.

Now both commands try to download the pre-built dashboard first,
falling back to source files if the release isn't available.

This makes 'bazinga init' work out of the box without npm.

* fix: address PR review feedback for sqlite3 architecture handling

Critical fixes:
- Include 'bindings' package (transitive dependency of better-sqlite3)
- Load drizzle-orm dynamically to avoid defeating lazy loading
  (drizzle-orm/better-sqlit

--- a/.github/workflows/dashboard-release.yml
+++ b/.github/workflows/dashboard-release.yml
@@ -23,7 +23,9 @@ jobs:
           - os: ubuntu-latest
             platform: linux
             arch: x64
-          - os: macos-latest
+          # IMPORTANT: macos-13 is Intel, macos-14+ is Apple Silicon
+          # macos-latest now points to macos-14 (arm64), so we must use macos-13 for x64
+          - os: macos-13
             platform: darwin
             arch: x64
           - os: macos-14
@@ -62,7 +64,19 @@ jobs:
         working-directory: dashboard-v2
         run: |
           # Compile socket server for standalone use
+          # Note: better-sqlite3 is external because native addons can't be bundled
           npx esbuild src/lib/socket/server.ts --bundle --platform=node --target=node18 --outfile=dist/socket-server.js --external:better-sqlite3
+
+          # Copy the native module AND its runtime dependencies
+          # better-sqlite3 requires 'bindings' package at runtime to locate .node files
+          # Note: Using rsync -a instead of cp -a for macOS compatibility (BSD cp doesn't support -a)
+          mkdir -p dist/node_modules
+          rsync -a node_modules/better-sqlite3 dist/node_modules/
+          rsync -a node_modules/bindings dist/node_modules/
+          # file-uri-to-path is a dependency of bindings (may not exist in all versions)
+          if [ -d node_modules/file-uri-to-path ]; then
+            rsync -a node_modules/file-uri-to-path dist/node_modules/
+          fi
 
       - name: Prepare release package
         working-directory: dashboard-v2
@@ -107,9 +121,13 @@ jobs:
             cp scripts/start-standalone.ps1 release-package/dashboard-v2/scripts/
           fi
 
-          # Copy compiled socket server for real-time updates
+          # Copy compiled socket server and its dependencies for real-time updates
           if [ -f "dist/socket-server.js" ]; then
             cp dist/socket-server.js release-package/dashboard-v2/
+            # Copy native modules with preserved permissions (rsync for macOS compatibility)
+            if [ -d "dist/node_modules" ]; then
+              rsync -a dist/node_modules release-package/dashboard-v2/
+            fi
           fi
 
           # Create version file
